--- a/movingdetectorexample/build.gradle
+++ b/movingdetectorexample/build.gradle
@@ -5,7 +5,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.peanut.folderpickerexample"
+        applicationId "com.peanut.movingdetectorexample"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
@@ -30,11 +30,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta1'
     testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(path: ':folderpicker')
+    implementation project(path: ':sensormanager')
+    implementation project(path: ':commonlibs')
 }
