--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':lib', ':folderpicker', ':folderpicker', ':folderpickerexample', ':folderpickerexample'
+include ':folderpicker', ':folderpickerexample', ':movingdetectorexample', ':sensormanager', ':activitymanager', ':commonlibs'
